ed: injecting galen's copy, minute structural/style edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,103 +2,41 @@
     <head>
         <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
         <link href="/styles.css" rel="stylesheet" />
-        <meta name="viewport" content="width=device-width">
-        <title>Tlon Corporation</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <title>Urbit Hosting from Tlon</title>
     </head>
-    <body class="flex-auto f3-s f6-l">
-      <section class="measure-wide-ns center tc mt10">
+    <body class="flex-auto f3-s f6-xl">
+
+      <section class="measure-wide center tc mt10">
         <p>Leave the internet behind.</p>
-      </section>  
-
-      <img class="mw7 db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
-      
-      <section class="measure-wide center pt8">
-        <p>We built a calm, safe, and beautiful place to build lasting communities and new cultures because we couldn't find one anywhere else.</p> 
-        <p>This is Urbit:<br>
-        It's simple, designed to last forever, and belongs to you 100%.</p>
-        <p>Soon, you can try Urbit yourself:</p>
-        <form 
-          action="https://urbit.us11.list-manage.com/subscribe/post?u=972a03db9e0c6c25bb58de8c8&amp;id=0864786f97"
-          method="post" 
-          id="mc-embedded-subscribe-form" 
-          name="mc-embedded-subscribe-form" 
-          class="validate form mt6" 
-          target="_blank"
-          novalidate
-        >
-          <div class="input-group" id="mc_embed_signup_scroll">
-            <div class="mc-field-group w-100 flex">
-              <div class="relative w-100 mw5 mb2">
-                <input 
-                class="bg-white black b--custom-gray4 ba br1 pa2 w-100 br0 wk-appearance-none pr7 f8"
-                style="height: 36px;"
-                type="email" 
-                name="EMAIL"
-                id="mce-EMAIL" 
-                placeholder="zod@urbit.org" 
-                required>
-                <span class="relative"></span>
-              </div>
-
-              <button 
-                id="mc-embedded-subscribe" 
-                class="ml1 br1 dib bn bg-black white flex-shrink-0 ph4 wk-appearance-none f8"
-                style="font-family: 'Inter UI', san-serif; height: 36px;" 
-                type="submit"
-                name="subscribe">
-                Join Waitlist
-              </button>
-
-                </div>
-              </div>
-        </form>
-        <p>Urbit is for bringing together a group to chat, write, and share links. Urbit is also a general-purpose digital environment, so it will grow new and exciting capabilities in due time. There are no ads, no tracking and no lock-in. Your Urbit data and identity are yours to keep, forever.</p>
-        <p>At Tlon, we find today's megacorp platforms to be frustrating to use, often creepy, and mostly disappointing. We wanted a way to build high-trust communities, to keep our data forever, and to explore what's possible when people control their own software.</p>
-        <p>We didn't want to solve this problem halfway - we wanted a lasting solution. So we started from scratch with a new, radically simple computing platform. Urbit makes it possible for an individual to control their own programs and data; Tlon makes it possible for anyone to use Urbit without ever touching the command line.</p>
-        <p>We don't want to juggle a mess of apps and we don't want to depend on giant platforms to make cloud computing possible. Urbit is the beginning of a new kind of personal cloud computing.</p>
-        <p>With our forthcoming release of new Urbit hosting services, owning and using the world's last personal computer will be easier than ever.</p>
-        <p>We'll let you know when more capacity is available:</p>
-        <form 
-          action="https://urbit.us11.list-manage.com/subscribe/post?u=972a03db9e0c6c25bb58de8c8&amp;id=0864786f97"
-          method="post" 
-          id="mc-embedded-subscribe-form" 
-          name="mc-embedded-subscribe-form" 
-          class="validate form mt6" 
-          target="_blank"
-          novalidate
-        >
-          <div class="input-group" id="mc_embed_signup_scroll">
-            <div class="mc-field-group w-100 flex">
-              <div class="relative w-100 mw5 mb2">
-                <input 
-                class="bg-white black b--custom-gray4 ba br1 pa2 w-100 br0 wk-appearance-none pr7 f8"
-                style="height: 36px;"
-                type="email" 
-                name="EMAIL"
-                id="mce-EMAIL" 
-                placeholder="zod@urbit.org" 
-                required>
-                <span class="relative"></span>
-              </div>
-
-              <button 
-                id="mc-embedded-subscribe" 
-                class="ml1 br1 dib bn bg-black white flex-shrink-0 ph4 wk-appearance-none f8"
-                style="font-family: 'Inter UI', san-serif; height: 36px;" 
-                type="submit"
-                name="subscribe">
-                Join Waitlist
-              </button>
-
-                </div>
-              </div>
-        </form>
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="link br1 dib">Join Waitlist →</a>
       </section>
 
-    <footer class="measure-wide center tc pv8 mt8">
+      <img class="w-100 mw7-xl db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
+
+      <section class="measure-wide center pt8 pa4">
+        <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we've been building a new kind of OS from scratch that lives in the cloud, called <a href="https://urbit.org">Urbit</a>.</p>
+        <p>Urbit is simple, built to last forever and is 100% owned by its users. There are no ads, no tracking and no megacorp watching over you. You decide what you see, who you connect with and how you compute.</p>
+        <p>We want to make it easy for anyone to use Urbit in just a few clicks. Our hosting service does that, and we're almost ready to roll it out. If you'd like to try it, join the waitlist below.</p>
+
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv3 mv3 br1 dib white bg-black">Join Waitlist →</a>
+
+        <p>Today, on the surface, Urbit is a calm, independent place for you and your friends to chat, write and share links. Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet. Your Urbit data and identity are yours to keep, forever.</p>
+        <p>At Tlon, we find today's megacorp platforms to be frustrating to use, often creepy, and mostly disappointing. We wanted a way to build high-trust communities, to keep our data forever, and to explore what's possible when people control their own software.</p>
+        <p>We weren't satisfied solving this problem halfway - we wanted a lasting solution. So we started from the ground up.. Urbit makes it possible for an individual to control their own programs and data; Tlon makes it possible for anyone to use Urbit without ever touching the command line.</p>
+        <p>We don't want to juggle a mess of apps and we don't want to depend on giant platforms to make cloud computing possible. Urbit is the beginning of a new kind of personal cloud computing.</p>
+        <p>We'll happily let you know when more capacity is available.</p>
+
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv3 mv3 br1 dib white bg-black">Join Waitlist →</a>
+
+        <p>(We're not the only ones working on Urbit. We've had a lot of help from friends, supporters and contributors. The network is owned by the people who use it, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you're curious to go deeper, but don't want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
+      </section>
+
+    <section class="measure-wide center tc mt10 mb10">
         <a href="https://urbit.org/privacy">Privacy Policy</a>
-        <a class="ml4" href="https://urbit.org/terms-of-use/">Terms of Service</a>
         <a class="ml4" href="mailto:support@tlon.io">support@tlon.io</a>
-    </footer>
+    </section>
+    
     </body>
 </html>
