can still be better

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,34 +10,30 @@
 
       <section class="measure-wide center tc mt10">
         <p>Leave the internet behind.</p>
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-black">Join Waitlist →</a>
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-black">Reserve a spot →</a>
       </section>
 
       <img class="w-100 mw7-xl db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
 
       <section class="measure-wide center pt8 pa4">
         <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a href="https://urbit.org">Urbit</a>.</p>
-        <p>Urbit is simple, built to last forever, and is 100% owned by its users.</p>
-        <p>There are no ads, no tracking and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
-        <p>We want to make it easy for anyone to use Urbit in just a few clicks. Our hosting service does that, and we’re almost ready to roll it out. If you’d like to try it, join the waitlist below.</p>
 
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-black">Join Waitlist →</a>
+        <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write and share links. There are no ads, no tracking and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
+        <p>Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet.</p>
+        <p>We wanted a platform we could really commit ourselves to, so we built Urbit to be simple, to last forever, and to be 100% owned and controlled by the people who use it.</p>
 
-        <p>Today, on the surface, Urbit is a calm, independent place for you and your friends to chat, write, and share links. Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet. Your Urbit data and identity are yours to keep, forever.</p>
-        <p>At Tlon, we find today’s megacorp platforms to be frustrating to use, often creepy, and mostly disappointing. We wanted a way to build high-trust communities, to keep our data forever, and to explore what’s possible when people control their own software.</p>
-        <p>We weren’t satisfied solving this problem halfway — we wanted a lasting solution. So we started from the ground up. Urbit makes it possible for an individual to control their own programs and data; Tlon makes it possible for anyone to use Urbit without ever touching the command line.</p>
-        <p>We don’t want to juggle a mess of apps and we don’t want to depend on giant platforms to make cloud computing possible. Urbit is the beginning of a new kind of personal cloud computing.</p>
-        <p>We’ll happily let you know when more capacity is available.</p>
+        <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p>
+        <p>Join the waitlist and we’ll get in touch as capacity opens up:</p>
 
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-black">Join Waitlist →</a>
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-black">Reserve a spot →</a>
 
-        <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters and contributors. The network is owned by the people who use it, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
+        <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters and contributors. The network is owned and operated by a variety of people, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
       </section>
 
     <section class="center tc mt10 pb10">
         <a class="link mh4"href="https://urbit.org/privacy">Privacy Policy</a>
         <a class="link mh4" href="mailto:support@tlon.io">support@tlon.io</a>
     </section>
-    
+
     </body>
 </html>
