ed: legal, style edits

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -58,6 +58,10 @@ a {
   color: black;
 }
 
+.bg-dusk {
+  background-color: #46292B;
+}
+
 address,
 .mono {
   font-family: "Source Code Pro", monospace;
