--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
       <section class="measure-wide center tc mt10">
         <p>Leave the internet behind.</p>
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-black">Reserve a spot →</a>
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-dusk">Reserve a spot</a>
       </section>
 
       <img class="w-100 mw7-xl db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
@@ -25,13 +25,13 @@
         <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p>
         <p>Join the waitlist and we’ll get in touch as capacity opens up:</p>
 
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-black">Reserve a spot →</a>
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-dusk">Reserve a spot</a>
 
         <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters and contributors. The network is owned and operated by a variety of people, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
       </section>
 
     <section class="center tc mt10 pb10">
-        <a class="link mh4"href="https://urbit.org/privacy">Privacy Policy</a>
+        <a class="link mh4"href="https://urbit.org/privacy/">Privacy Policy</a>
         <a class="link mh4" href="mailto:support@tlon.io">support@tlon.io</a>
     </section>
 
