ed: fixed home link to /legal

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
       </section>
 
     <section class="center tc mt10 pb10">
-        <a class="link mh4"href="https://urbit.org/privacy/">Privacy Policy</a>
+        <a class="link mh4"href="/legal">Privacy Policy</a>
         <a class="link mh4" href="mailto:support@tlon.io">support@tlon.io</a>
     </section>
 
