ed: refreshed photo, real typeface, other edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-dusk">Reserve a spot</a>
       </section>
 
-      <img class="w-100 mw7-xl db center mt10 pt3 br1" src="https://d2w9rnfcy7mm78.cloudfront.net/8544818/original_022633fc19fb823a07240f5a12aea9c0.jpg"/>
+      <img class="w-100 mw7-xl db center mt10 pt3" src="https://storage.googleapis.com/media.urbit.org/tlon/landscape.jpg"/>
 
       <section class="measure-wide center pt8 pa4">
         <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a href="https://urbit.org">Urbit</a>.</p>
