--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,9 +2,13 @@
 @import url('https://rsms.me/inter/inter-ui.css');
 
 @font-face {
-  font-family: "Untitled";
-  src: url("https://storage.googleapis.com/media.urbit.org/fonts/untitled.woff");
+  font-family: 'Untitled';
+  src: url('https://storage.googleapis.com/media.urbit.org/fonts/untitled-serif-web-regular.eot');
+  src: url('https://storage.googleapis.com/media.urbit.org/fonts/untitled-serif-web-regular.eot?#iefix') format('embedded-opentype'),
+       url('https://storage.googleapis.com/media.urbit.org/fonts/untitled-serif-web-regular.woff2') format('woff2'),
+       url('https://storage.googleapis.com/media.urbit.org/fonts/untitled-serif-web-regular.woff') format('woff');
   font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
