--- a/templates/page.html
+++ b/templates/page.html
@@ -5,11 +5,11 @@
 {% block content %}
 
 <!-- content -->
-
-<article class="mt4 mb4 c1-13 c4-12-lg measure-wide center">
-    <p>{{ page.title }}</p>
-  <!-- body -->
-  {{ page.content | safe }}
-</article>
-
+<body class="flex-auto f3-s f6-xl">
+    <article class="measure-wide center pt8 pa4">
+        <p>{{ page.title }}</p>
+    <!-- body -->
+    {{ page.content | safe }}
+    </article>
+</body>
 {% endblock content %}
