index: add metadata elements, og info, twitter info, etc.
Also, remove test version of Untitled Serif.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
-        <link href="/styles.css" rel="stylesheet" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="UTF-8">
-        <title>Urbit Hosting from Tlon</title>
+      <meta charset="UTF-8">
+      <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="twitter:site" content="@tloncorporation">
+      <meta name="twitter:card" content="/twitter.png">
+      <meta property="og:url" content="https://tlon.io">
+      <meta property="og:site_name" content="Tlon">
+      <meta property="og:image" content="/og.png">
+      <meta property="og:description" content="Urbit Hosting from Tlon">
+      <title>Urbit Hosting from Tlon</title>
+      <link href="/styles.css" rel="stylesheet" />
     </head>
     <body class="flex-auto f3-s f6-xl">
       <section class="measure-wide center tc mt10">
