index: add new hero image

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -66,6 +66,10 @@ a {
   background-color: #46292B;
 }
 
+.bg-blue {
+  background-color: #219DFF;
+}
+
 address,
 .mono {
   font-family: "Source Code Pro", monospace;
