--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,10 @@
     <body class="flex-auto f3-s f6-xl">
       <section class="measure-wide center tc mt10">
         <p>Leave the internet behind.</p>
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-dusk">Reserve a spot</a>
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-blue">Reserve a spot</a>
       </section>
-      <img class="w-100 mw7-xl db center mt10 pt3" src="https://storage.googleapis.com/media.urbit.org/tlon/landscape.jpg"/>
-      <section class="measure-wide center pt8 pa4">
+      <img class="w-100 mw9-xl db center mt9 pt2" src="https://storage.googleapis.com/media.urbit.org/tlon/landscape-interface-test-3.png"/>
+      <section class="measure-wide center ph4 pb4">
         <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a href="https://urbit.org">Urbit</a>.</p>
         <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write, and share links. There are no ads, no tracking, and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
         <p>Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet.</p>
