--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <p>Leave the internet behind.</p>
         <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-blue">Reserve a spot</a>
       </section>
-      <img class="w-100 mw9-xl db center mt9 pt2" src="https://storage.googleapis.com/media.urbit.org/tlon/landscape-interface-test-3.png"/>
+      <img class="w-100 mw9-xl db center mt9 pt2" src="https://storage.googleapis.com/media.urbit.org/tlon/landscape-interface.png"/>
       <section class="measure-wide center ph4 pb4">
         <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a href="https://urbit.org">Urbit</a>.</p>
         <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write, and share links. There are no ads, no tracking, and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
@@ -26,7 +26,7 @@
         <p>We wanted a platform we could really commit ourselves to, so we built Urbit to be simple, to last forever, and to be 100% owned and controlled by the people who use it.</p>
         <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p>
         <p>Join the waitlist and we’ll get in touch as capacity opens up:</p>
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-dusk">Reserve a spot</a>
+        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-blue">Reserve a spot</a>
         <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters, and contributors. The network is owned and operated by a variety of people, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
       </section>
     <section class="center tc mt10 pb10">
