metadata: fix og title -> "Tlon"

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
       <meta property="og:site_name" content="Tlon">
       <meta property="og:image" content="/og.png">
       <meta property="og:description" content="Urbit Hosting from Tlon">
-      <title>Urbit Hosting from Tlon</title>
+      <title>Tlon</title>
       <link href="/styles.css" rel="stylesheet" />
     </head>
     <body class="flex-auto f3-s f6-xl">
