base template: add matomo tracking

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,25 @@
     <!-- START CSS -->
     <link href="/styles.css" rel="stylesheet" />
     <!-- END CSS -->
+
+    <!-- Matomo -->
+    <script type="text/javascript">
+      var _paq = window._paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function () {
+        var u = "https://analytics.urbit.org/";
+        _paq.push(['setTrackerUrl', u + 'matomo.php']);
+        _paq.push(['setSiteId', '3']);
+        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+        g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+      })();
+    </script>
+    <noscript>
+      <p><img src="https://analytics.urbit.org/matomo.php?idsite=3&amp;rec=1" style="border:0;" alt="" /></p>
+    </noscript>
+    <!-- End Matomo Code -->
   </head>
   <body {% block bodyclasses %} {% endblock bodyclasses %}>
     {% block content %}
