--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,24 @@
       <meta property="og:description" content="Urbit Hosting from Tlon">
       <title>Tlon</title>
       <link href="/styles.css" rel="stylesheet" />
+      <!-- Matomo -->
+      <script type="text/javascript">
+        var _paq = window._paq || [];
+        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function () {
+          var u = "https://analytics.urbit.org/";
+          _paq.push(['setTrackerUrl', u + 'matomo.php']);
+          _paq.push(['setSiteId', '3']);
+          var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+          g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+        })();
+      </script>
+      <noscript>
+        <p><img src="https://analytics.urbit.org/matomo.php?idsite=3&amp;rec=1" style="border:0;" alt="" /></p>
+      </noscript>
+      <!-- End Matomo Code -->
     </head>
     <body class="flex-auto f3-s f6-xl">
       <section class="measure-wide center tc mt10">
