link to privacy

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
         <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters, and contributors. The network is owned and operated by a variety of people, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
       </section>
     <section class="center tc mt10 pb10">
-        <a class="link mh4"href="/legal">Privacy Policy</a>
+        <a class="link mh4"href="/privacy">Privacy Policy</a>
         <a class="link mh4" href="mailto:support@tlon.io">support@tlon.io</a>
     </section>
     </body>
