--- a/templates/page.html
+++ b/templates/page.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
-
+{% block title %}<title>{{ page.title }}</title>{% endblock title %}
 {% block bodyclasses %}class="page"{% endblock bodyclasses %}
 
 {% block content %}
-
 <!-- content -->
 <body class="flex-auto f3-s f6-xl">
-    <article class="measure-wide center pt8 pa4">
+    <article class="measure-wide center ph4 pb4">
         <p>{{ page.title }}</p>
     <!-- body -->
     {{ page.content | safe }}
