--- a/templates/index.html
+++ b/templates/index.html
@@ -1,55 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="twitter:site" content="@tloncorporation">
-      <meta name="twitter:card" content="/twitter.png">
-      <meta property="og:url" content="https://tlon.io">
-      <meta property="og:site_name" content="Tlon">
-      <meta property="og:image" content="/og.png">
-      <meta property="og:description" content="Urbit Hosting from Tlon">
-      <title>Tlon</title>
-      <link href="/styles.css" rel="stylesheet" />
-      <!-- Matomo -->
-      <script type="text/javascript">
-        var _paq = window._paq || [];
-        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-        _paq.push(['trackPageView']);
-        _paq.push(['enableLinkTracking']);
-        (function () {
-          var u = "https://analytics.urbit.org/";
-          _paq.push(['setTrackerUrl', u + 'matomo.php']);
-          _paq.push(['setSiteId', '3']);
-          var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-          g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
-        })();
-      </script>
-      <noscript>
-        <p><img src="https://analytics.urbit.org/matomo.php?idsite=3&amp;rec=1" style="border:0;" alt="" /></p>
-      </noscript>
-      <!-- End Matomo Code -->
-    </head>
-    <body class="flex-auto f3-s f6-xl">
-      <section class="measure-wide center tc mt10">
-        <p>Leave the internet behind.</p>
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br1 dib white bg-blue">Reserve a spot</a>
-      </section>
-      <img class="w-100 mw9-xl db center mt9 pt2" src="https://storage.googleapis.com/media.urbit.org/tlon/landscapes-full.png"/>
-      <section class="measure-wide center ph4 pb4">
-        <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a href="https://urbit.org">Urbit</a>.</p>
-        <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write, and share links. There are no ads, no tracking, and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
-        <p>Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet.</p>
-        <p>We wanted a platform we could really commit ourselves to, so we built Urbit to be simple, to last forever, and to be 100% owned and controlled by the people who use it.</p>
-        <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p>
-        <p>Join the waitlist and we’ll get in touch as capacity opens up:</p>
-        <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-blue">Reserve a spot</a>
-        <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters, and contributors. The network is owned and operated by a variety of people, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
-      </section>
-    <section class="center tc mt10 pb10">
-        <a class="link mh4"href="/privacy">Privacy Policy</a>
-        <a class="link mh4" href="mailto:support@tlon.io">support@tlon.io</a>
-    </section>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}<title>Tlon</title>{% endblock title %}
+{% block bodyclasses %}class="flex-auto f3-s f6-xl"{% endblock bodyclasses %}
+
+{% block content %}
+<body>
+  <section class="measure-wide center tc mt10">
+    <h1 class="f4 fw5 sans-serif">Leave the internet behind.</h1>
+    <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="tc link ph6 pv2 mv3 br2 dib white bg-blue sans-serif">Reserve a spot</a>
+  </section>
+
+  <img class="w-100 mw9-xl db center mt9 pt2" src="https://storage.googleapis.com/media.urbit.org/tlon/landscapes-full.png"/>
+
+  <section class="measure-wide center ph4 pb4">
+    <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a href="https://urbit.org">Urbit</a>.</p>
+    <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write, and share links. There are no ads, no tracking, and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
+    <p>Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet.</p>
+    <p>We wanted a platform we could really commit ourselves to, so we built Urbit to be simple, to last forever, and to be 100% owned and controlled by the people who use it.</p>
+    <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p>
+    <p>Join the waitlist and we’ll get in touch as capacity opens up:</p>
+    <a href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io" class="w-100 tc link ph6 pv2 mv3 br1 dib white bg-blue">Reserve a spot</a>
+    <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters, and contributors. The network is owned and operated by a variety of people, and the whole project is <a href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
+  </section>
+
+<section class="center tc mt10 pb10">
+    <a class="link mh4"href="/privacy">Privacy Policy</a>
+    <a class="link mh4" href="mailto:support@tlon.io">support@tlon.io</a>
+</section>
+
+</body>
+{% endblock content %}
