tlon.io: new styling, blog, etc.
Part 2 of 2 of an update to tlon.io, using a new styling approach, and generally restructuring the repo.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <!-- END FAVICON -->
 
     <!-- START CSS -->
-    <link href="/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
     <!-- END CSS -->
 
     <!-- Matomo -->
@@ -39,8 +39,10 @@
     </noscript>
     <!-- End Matomo Code -->
   </head>
-  <body {% block bodyclasses %} {% endblock bodyclasses %}>
+  <body>
+    {% include "partials/nav.html" %}
     {% block content %}
     {% endblock content %}
+    {% include "partials/footer.html" %}
   </body>
 </html>
