base.html: style.css relative to root dir

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <!-- END FAVICON -->
 
     <!-- START CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <!-- END CSS -->
 
     <!-- Matomo -->
