tlon.io: fixes to metadata, styling updates, blog set into place
The only remaining todo is asset work at this point, pending larger changes to the templates.

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -20,4 +20,5 @@ html { font-family: 'Inter var', sans-serif; }
     margin: auto;
     font-family: "Untitled-Serif", serif;
     -webkit-font-smoothing: antialiased;
+    margin-bottom: 2rem;
 }
