--- a/templates/news-post.html
+++ b/templates/news-post.html
@@ -5,13 +5,14 @@
 {% endblock title %}
 
 {% block content %}
-
-<article class="p-8 lg:p-16 lg:w-10/12 container mx-auto"></article>
+<article class="p-8 lg:p-16 lg:w-10/12 container mx-auto">
 
     <header class="box-border lg:w-7/12 pb-16 m-auto">
         <h1 class="text-3xl font-medium pb-2">{{ page.title }}</h1>
-        <p class="pb-2">Galen Wolfe-Pauly</p>
-        <a class="text-gray-400" href="#">{{ page.date }}</a>
+        {% if page.extra.author %}
+        <p class="pb-2">{{page.extra.author}}</p>
+        {% endif %}
+        <a class="text-gray-400" href="#">{{ page.date | date(format="%B %Y") }}</a>
     </header>
 
     <section class="editorial pt-16 leading-relaxed text-lg lg:text-xl font-serif">
