--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
 <img class="" src="https://storage.googleapis.com/media.urbit.org/tlon/landscapes-full.png">
 <article class="p-8 lg:p-16 lg:w-10/12 container mx-auto">
 <section class="editorial leading-relaxed text-lg lg:text-xl font-serif">
-    <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a class="underline" href="https://urbit.org">Urbit</a>.</p><br>
-    <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write, and share links. There are no ads, no tracking, and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p><br>
-    <p>Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet.</p><br>
-    <p>We wanted a platform we could really commit ourselves to, so we built Urbit to be simple, to last forever, and to be 100% owned and controlled by the people who use it.</p><br>
-    <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p><br>
+    <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a class="underline" href="https://urbit.org">Urbit</a>.</p>
+    <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write, and share links. There are no ads, no tracking, and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
+    <p>Under the hood, Urbit is a completely general-purpose computing platform and decentralized network that’s a new layer on top of the internet.</p>
+    <p>We wanted a platform we could really commit ourselves to, so we built Urbit to be simple, to last forever, and to be 100% owned and controlled by the people who use it.</p>
+    <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p>
     <p>Join the waitlist and we’ll get in touch as capacity opens up:</p>
     <section class="box-border p-8 lg:p-16 grid justify-items-stretch">
         <a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl justify-self-center font-sans text-base" href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io">Join the waitlist</a>
