--- a/templates/news-post.html
+++ b/templates/news-post.html
@@ -12,7 +12,7 @@
         {% if page.extra.author %}
         <p class="pb-2">{{page.extra.author}}</p>
         {% endif %}
-        <a class="text-gray-400" href="#">{{ page.date | date(format="%B %Y") }}</a>
+        <p class="text-gray-400" href="#">{{ page.date | date(format="%B %Y") }}</p>
     </header>
 
     <section class="editorial pt-16 leading-relaxed text-lg lg:text-xl font-serif">
