--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
   <a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl justify-self-center" href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io">Join the waitlist</a>
 </header>
 
-<img class="" src="https://storage.googleapis.com/media.urbit.org/tlon/landscapes-full.png">
-<article class="p-8 lg:p-16 lg:w-10/12 container mx-auto">
+<img class="lg:w-10/12 mx-auto" alt="The Landscape client, by Tlon Corporation" src="https://storage.googleapis.com/media.urbit.org/tlon/landscape.png">
+<article class="p-8 lg:pt-0 lg:px-16 lg:pb-16 lg:w-10/12 container mx-auto">
 <section class="editorial leading-relaxed text-lg lg:text-xl font-serif">
     <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a class="underline" href="https://urbit.org">Urbit</a>.</p>
     <p>Today, on the surface, Urbit is a calm, sheltered place for you and your friends to chat, write, and share links. There are no ads, no tracking, and no megacorp watching over you. You decide what you see, who you connect with, and how you compute.</p>
