index: minor padding update

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <p>We wanted a platform we could really commit ourselves to, so we built Urbit to be simple, to last forever, and to be 100% owned and controlled by the people who use it.</p>
     <p>We’ve been working on Urbit quietly for a few years, and now we’re nearly ready to make it easy to sign up and get going in a few clicks.</p>
     <p>Join the waitlist and we’ll get in touch as capacity opens up:</p>
-    <section class="box-border p-8 lg:p-16 grid justify-items-stretch">
+    <section class="box-border p-8 lg:pt-8 lg:px-16 lg:pb-16 grid justify-items-stretch">
         <a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl justify-self-center font-sans text-base" href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io">Join the waitlist</a>
     </section>
     <p>(We’re not the only ones working on Urbit. We’ve had a lot of help from friends, supporters, and contributors. The network is owned and operated by a variety of people, and the whole project is <a class="underline" href="https://github.com/urbit/urbit">open source</a>. If you’re curious to go deeper, but don’t want to read the source code — try <a class="underline" href="https://urbit.org/understanding-urbit/">these posts</a>.)</p>
