tlon.io: A smattering of visual changes across all pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 {% block title %}<title>Tlon Corporation</title>{% endblock title %}
 
 {% block content %}
-<header class="p-8 lg:p-16 grid justify-items-stretch">
+<header class="p-8 lg:pt-56 lg:py-16 lg:pb-16 grid justify-items-stretch">
   <h1 class="text-3xl font-medium lg:text-center pb-16">Leave the internet behind.</h1>
   <a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl justify-self-center" href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io">Join the waitlist</a>
 </header>
 
-<img class="lg:w-10/12 mx-auto" alt="The Landscape client, by Tlon Corporation" src="https://storage.googleapis.com/media.urbit.org/tlon/landscape.png">
+<img class="lg:w-10/12 mx-auto" alt="The Landscape client, by Tlon Corporation" src="https://storage.googleapis.com/media.urbit.org/tlon/landscapes.png">
 <article class="p-8 lg:pt-0 lg:px-16 lg:pb-16 lg:w-10/12 container mx-auto">
 <section class="editorial leading-relaxed text-lg lg:text-xl font-serif">
     <p>We believe in the power of computers to connect people, but we’re tired of today’s internet. So we’ve been building a new kind of OS from scratch that lives in the cloud, called <a class="underline" href="https://urbit.org">Urbit</a>.</p>
