--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="p-8 lg:p-16 lg:grid lg:grid-cols-6 gap-4">
+<footer class="p-8 lg:pt-48 lg:px-16 lg:pb-16 lg:grid lg:grid-cols-6 gap-4">
     <p class="pb-16 lg:col-span-3 text-gray-400">Tlon Corporation</p>
     
     <section class="pb-8 lg:col-span-1">
