--- a/templates/news.html
+++ b/templates/news.html
@@ -2,10 +2,10 @@
 {% block title %}<title>Tlon News</title>{% endblock title %}
 {% block content %}
 {% include "partials/nav.html" %}
-<header class="p-8 lg:p-16 grid justify-items-stretch">
+<header class="p-8 lg:p-16">
     <h1 class="text-3xl font-medium pb-2">Tlon News</h1>
     <p class="pb-2">Learn more about Tlon’s work, the Urbit community, and other stories</p>
-    <a class="text-gray-400" href="#">Subscribe to Tlon’s Newsletter</a>
+    <!-- <a class="text-gray-400" href="#">Subscribe to Tlon’s Newsletter</a> -->
 </header>
 
   <section class="p-8 lg:p-16">
@@ -14,9 +14,9 @@
 	
 	<section class="new-posts">
 		{% for page in section.pages %}
-		<a href="{{ page.permalink | safe }}">
+		<a class="inline-block" href="{{ page.permalink | safe }}">
 			<article class="blog-post gap-8 py-8 lg:w-1/3">
-				<div class="metadata-column lg:col-span-1 pb-4">
+				<div class="pb-4">
 					<h3 class="py-1 font-semibold">
 						{{ page.title }}
 					</h3>
@@ -26,7 +26,7 @@
                         {% endif %}
 					</div>
 					<div class="py-1">
-						<p">{{ page.date | date(format="%B %Y") }}</p> 	
+						<p class="text-gray-400">{{ page.date | date(format="%B %Y") }}</p> 	
 					</div>
 				</div>
 				<img class="w-full lg:h-48 lg:h-72 lg:w-100 rounded-xl lg:flex mb-4 object-cover border-black border-opacity-20 border border-solid" src="{% if page.extra.postimage %}{{ page.extra.postimage }}{% endif %}">
