reverted some styling changes, removed newsletter link

--- a/templates/news.html
+++ b/templates/news.html
@@ -10,7 +10,7 @@
 
   <section class="p-8 lg:p-16">
 
-	<h2 class="mb-8 lg:mb-12 text-gray-400">All Stories</h2>
+	<h2 class="mb-8 lg:mb-12 text-gray-400">All Posts</h2>
 	
 	<section class="new-posts">
 		{% for page in section.pages %}
