--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,4 +1,4 @@
 <nav class="flex justify-between box-border pt-16 px-8 pb-8 lg:p-16">
     <a class="" href="/">Tlon Corporation</a>
-    <a class="" href="/news">Posts</a>
+    <a class="" href="/news">News</a>
 </nav>
