fix og and twitter image content links

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="twitter:site" content="@tloncorporation">
-    <meta name="twitter:card" content="/twitter.png">
+    <meta name="twitter:card" content="https://storage.googleapis.com/media.urbit.org/tlon/twitter.png">
     <meta name="twitter:creator" content="@tloncorporation">
 
     <meta property="og:url" content="https://tlon.io">
     <meta property="og:site_name" content="Tlon">
-    <meta property="og:image" content="/og.png">
+    <meta property="og:image" content="https://storage.googleapis.com/media.urbit.org/tlon/og.png">
     <meta property="og:description" content="Urbit Hosting from Tlon">
     {% block title %}{% endblock title %}
     {% block description %}{% endblock description %}
